# wasm-components

./: .gitignore  README.md  compose.test.js  index.js  index.test.js  mix.exs  package-lock.json  package.json
.github/workflows/: publish.yaml
components/convert-format/: Cargo.toml
components/convert-format/src/: lib.rs
components/convert-format/wit/: world.wit
components/handlebars/: Cargo.toml
components/handlebars/src/: lib.rs
components/javascript/: Cargo.toml  tmp.js  wasmcloud.toml
components/javascript-p1/: Cargo.toml  out.wasm
components/javascript-p1/src/: bindings.rs  lib.rs
components/javascript-p1/wit/: world.wit
components/javascript/src/: lib.rs
components/javascript/wit/: world.wit
components/liquid/: Cargo.toml  wasmcloud.toml
components/liquid/src/: lib.rs
components/mustache/: Cargo.toml  wasmcloud.toml
components/mustache/src/: lib.rs
components/mustache/wit/: world.wit
components/python/: Cargo.toml  tests.sh  wasmcloud.toml
components/python/src/: lib.rs
components/python/wit/: world.wit
components/starlark/: Cargo.toml
components/starlark/src/: lib.rs
components/tera/: Cargo.toml
components/tera/src/: lib.rs
components/tera/wit/: world.wit
components/tinytemplate/: Cargo.toml
components/tinytemplate/src/: lib.rs
composition/run_template/: Cargo.toml  wasmcloud.toml
composition/run_template/src/: lib.rs
composition/run_template/wit/: world.wit
lib/: wasm_components.ex
test/: wasm_components_test.exs
wit/: expression.wit
