[package]
name = "convert-format"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
csv = "1.4.0"
minicbor-serde = { version = "0.6.1", features = ["alloc"] }
rmp-serde = "1.3.0"
serde-value = "0.7.0"
serde_json = "1.0.145"
serde_json5 = "0.2.1"
serde_yaml_ng = "0.10.0"
toml = { version = "0.9.8", features = ["serde", "display", "parse"] }
wit-bindgen = "0.47.0"
