[package]
name = "javascript-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rquickjs = {git = "https://github.com/DelSkayn/rquickjs.git", features = ["full-wasi"]}
# rquickjs-sys = {git = "https://github.com/DelSkayn/rquickjs.git", features = ["logging"]}

wit-bindgen = "0.41.0"
